--- a/estilo.css
+++ b/estilo.css
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: roboto;
-    
+
 }
 .center{
     /* centralizar o menu e logo */
@@ -13,27 +13,61 @@
     padding: 0 2%;
 }
 .clear{
-    clear: both;
+    clear: both; /* Não permiti elementos flutuantes à esquerda ou à direita de um outro elemento */
 }
-.conteudo-topo{
-    color: tomato;
-}
+
 .topo{
     background: linear-gradient(114deg, #250e8a, #00f9f7);
     padding-top:40px;
-    padding-bottom: 80px;
+   
 }
 .logo{
     /* logo a esquerda */
     float: left;
 }
+/* config do menu responsivel INICIO */
+.menu-mobile{
+    display: none;
+}
+.menu-mobile{
+    float: right;
+}
+.menu-mobile i{
+    font-size: 33px;
+    color: white;
+    cursor: pointer;
+}
+.menu-mobile ul{
+    display: none;
+    left: 0;
+    top: 80px;
+    width: 100%;
+    position: absolute;
+    list-style-type: none;
+}
+.menu-mobile li{
+    padding: 8px 0px;
+    text-align: center;
+    display: block;
+    width: 100%;
+    background: #ffffff;
+    border: 1px solid #00f9f7;
+
+}
+.menu-mobile a{
+    display: block;
+    text-decoration: none;
+    color: #202020;
+}
+/* config do menu responsivel FINAL */
+
 .menu-desktop{
     /* menu a direita */
     float: right;   
 }
 .menu-desktop li{
     /* estilisando as opções do menu */
-    display: inline-block;
+    display: inline;
     margin: 0 15px;
 }
 .menu-desktop a{
@@ -48,10 +82,10 @@
 .conteudo-topo{
     color: white;
     margin-top: 15px;
-    margin-left: 35px;
+
 }
 .imagem-topo{
-   display: inline-block;
+   display: flex;
    float: right; 
 }
 
@@ -59,15 +93,15 @@
 /* quebra de linha no paragrafo. */
 margin-top: 15px;
 margin-bottom: 18px;
-max-width: 290px;
-font-size: 20px;
+max-width: 3260px;
+font-size:19px;
 }
 .conteudo-topo a{
     color: blue;
     text-decoration: none;
     border: 1px solid black;
     background-color: gold;
-    font-size: 28px;
+    font-size: 23px;
     padding: 3px 9px;
     border-radius: 8px;
 }
@@ -75,9 +109,209 @@ font-size: 20px;
     font-size: 34px;
 }
 .imagem-topo img{
-    max-width: 100%;
+    max-width: 80%;
+    padding-bottom: 35px;
+
 }
+
+/****SLICK SLIDER****/
+
+.slick-dotted ul{
+	list-style-type: none;
+	text-align: center;
+	position: relative;
+	margin-top:10px;
+}
+
+.slick-dotted li{
+	display: inline-block;
+	margin: 0 7px;
+}
+
+.slick-dotted button:focus{
+	outline: 0;
+}
+
+.slick-dotted li button{
+	width: 16px;
+	height: 16px;
+	border-radius: 8px;
+	color: #d8d8d8;
+	border-width: 0;
+	background: #d8d8d8;
+	opacity: 1;
+	cursor: pointer;
+}
+
+li.slick-active button{
+	background: #0c3f8a;
+	color: #0c3f8a;
+}
+
+.slick-slide:focus { outline: none; }
+
+/**END SLICK**/
+
+
+.circle{
+    /* centralizar o icone inicio */
+    position: absolute;
+    left: 50%;
+    margin-top: -25px;
+    transform: translateX(-50%) ;
+    text-align: center;
+     /* centralizar o icone fim */
+    line-height: 70px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #ffffff;
+    box-shadow: 0 10px 25px rgba(37, 15, 139, 0.4);
+    
+}
+
+.conterner-slider img{
+    padding: 15px;
+}
+
+/* parte de esplicação dos diferenciais */
+
+.diferenciais h2{
+    text-align: center;
+    padding-top: 20px;
+    font-size: 30px;
+    color: #202020;
+    font-weight: normal; /*Tipo da fonte*/
+}
+
+.img-diferenciais{
+    padding-top: 25px;
+    display: flex;
+    flex-wrap: wrap;/* caso queira acresentar mais icones automaticamente ele vai para a linha a baixo */
+    margin-top: 80px;
+    text-align: center;
+    margin-left: 16px;
+    
+}
+div.img-diferenciais p{
+    max-width: 280px;
+    padding: 15px 0px;
+    margin: 0px 20px;
+    text-align: center;
+}
+div.img-diferenciais h3{
+    text-align: center;
+
+}
+div.img01{
+    text-align: center;
+}
+.descricao-time{
+    background: #f4f9fd;
+    padding: 40px 0px;
+}
+.descricao-time p{
+    float: left;
+    margin-top: 35px;
+    font-weight: normal;
+    color: #272727;
+    margin-right: 60%;
+}
+.descricao-time h2{
+    margin-top: 25px;
+    font-size: 20px;
+    color: #202020;
+    line-height: 35px;
+}
+.descricao-time img{
+   float: right;
+   margin-top: -140px;
+    max-width: 50%;
+    margin-bottom: 100px;
+}
+.depoimentos{
+    background: #23188f;
+    padding: 110px;
+    
+}
+.depoimentos h2{
+    color: #ffffff;
+    font-size: 30px;
+    font-weight: normal;
+    text-align: center;
+    margin-bottom: 45px;
+}
+.box-depoimentos{
+    text-align: center;
+    overflow: hidden;
+    width: 100%;
+    display: block;
+}
+.campo-depoimentos{
+    display: inline-block;
+    width: 100%;
+}
+.campo-depoimentos p{
+    text-align: center;
+    color: #ffffff;
+    margin-bottom: 15px;
+}
+.campo-depoimentos img{
+    /* deixar a foto redonta */
+   max-width: 90px;
+   margin-bottom: 60px;
+   border-radius: 50%;
+   
+}
+/* metodoligia */
+.metodologia{
+    /*config para subir o conteudo metodologia inicio*/
+    position: absolute;
+    z-index: 10; /* Esta propriedade faz que nao de bug em outros navegadores */
+    top: -40px;
+    left: 50%;
+    width: 100%;
+    transform: translateX(-50%);
+    /*config para subir o conteudo metodologia final*/
+    max-width: 940px;
+    margin:0 auto;
+    padding: 40px 0;
+    box-shadow: 10px 20px 60px rgb(0, 0, 0.06);
+    text-align: center;
+    background: #ffffff;
+    border-top: 3px solid #ffca00;
+}
+.metodologia h2{
+    font-weight: 24px;
+    font-weight: normal;
+    color: #232931;
+}
+.metodologia p{
+    font-size: 14px;
+    color: #b4b4b4;
+    margin: 15px 0;
+}
+.metodologia a{
+    text-decoration: none;
+    color: #ffffff;
+    padding: 8px 15px;
+    border-radius: 5px;
+    font-size: 14px;
+    display: inline-block;
+    margin-top: 25px;
+    background-color: #23188f;
+}
+footer{
+    background: #ffffff;
+    padding-top: 300px;
+    padding-bottom: 100px;
+    position: relative;
+}
+
+
 /* aplicando o responsivel */
 @media screen and (max-width: 768px){
     .conteudo-topo{width: 100%;}
+    .menu-desktop{display: none;}
+    .menu-mobile{display: block;}
 }
