--- a/estilo.css
+++ b/estilo.css
@@ -4,8 +4,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: roboto;
-
 }
+.w50{float: left;width: 50%;padding:0 15px;}
 .center{
     /* centralizar o menu e logo */
     max-width: 1100px;
@@ -24,6 +24,7 @@
 .logo{
     /* logo a esquerda */
     float: left;
+    margin-bottom: 25px;
 }
 /* config do menu responsivel INICIO */
 .menu-mobile{
@@ -72,7 +73,7 @@
 }
 .menu-desktop a{
     /* estilisando os link do menu */
-    color: white;
+    color: rgb(204, 44, 44);
     text-decoration: none;
     opacity:0.6;
 }
@@ -301,17 +302,143 @@ div.img01{
     margin-top: 25px;
     background-color: #23188f;
 }
+/* roda pe da pagina home */
 footer{
     background: #ffffff;
     padding-top: 300px;
     padding-bottom: 100px;
     position: relative;
 }
+footer>.center{
+    display: flex;
+    flex-wrap:wrap ;
+}
+.col-footer{
+    width: 20%;
+}
+.col-footer h2{
+    color: #232931;
+    font-size: 25px;
+    font-weight: normal;
+}
+.col-footer a{
+    color:#b4b4b4;
+    font-size: 20px;
+    display: block;
+    margin-top: 5px;
+    text-decoration: none;
+
+}
+
+/* estilo da pagina SOBRE */
+section.sobre-equipe{
+    padding: 40px 0;
+    display: block;
+}
+.equipe-texto h2{
+    font-size: 45px;
+    color: #202020;
+}
+.equipe-texto p{
+    font-size: 16px;
+    line-height: 34px;
+    color: #202020;
+    margin-top: 35px;
+}
+
+section.sobre-equipe img{
+    max-width: 100%;
+    margin-top: 45px;
+    border: 1px solid black;
+    border-radius: 15px;
+    margin-left: 50%;
+    margin-top: -10px;
+}
+
+/* galeria da pagina sobre */
+
+.sobre-imagens>.center{
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 50px;
+}
+.sobre-imagens img{
+    max-width: 100%;
+    margin-bottom: 50px;
+}
+.sobre-imagens .img-sobre{
+    padding: 0 30px;
+    width: 25%;
+}
+
+/* estilo pagina contato */
+
+section.contato{
+    padding: 38px 0;
+    margin-bottom: 25px;
+}
+.contato-info h2{
+    color: #220022;
+    font-size: 43px;
+    font-weight: normal;
+}
+.contato-info p{
+    color: #202020;
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
+.mapa-conteiner{
+    width: 100%;
+    padding-top: 70%; 
+    position: relative;
+}
+div#mapa{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 50%;
+    height: 50%;
+    background-color: gray;
+}
 
 
-/* aplicando o responsivel */
+
+
+
+/* aplicando o modo responsivel */
 @media screen and (max-width: 768px){
-    .conteudo-topo{width: 100%;}
-    .menu-desktop{display: none;}
-    .menu-mobile{display: block;}
+    /* modo responsivo footer */
+    .col-footer{
+        width: 100% !important;
+        margin-bottom: 30px;
+        text-align: center !important;
+    }
+    /* modo responsivo conteudo no topo */
+    .conteudo-topo{
+        width: 100%;
+    }
+    /* modo responsivo menu desktop */
+    .menu-desktop{
+        display: none;
+    }
+    /* modo responsivo menu mobile */
+    .menu-mobile{
+        display: block;
+    }
+    /* modo responsivo imagen pagina sobre */
+    section.sobre-equipe img{
+        margin-left: 0% !important;
+        max-width: 100%;
+        margin-top: 25px;
+    }
+    /* modo responsivo galeria pagina sobre */
+    .sobre-imagens .img-sobre{
+        padding: 0 30px;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 20px;
+        margin-bottom: 50px;
+    }
+
 }
